Changed css to fix bugs on iOS.

--- a/emo-check-frontend/src/index.css
+++ b/emo-check-frontend/src/index.css
@@ -6,7 +6,7 @@
 }
 
 main {
-  padding: 32px;
+  padding: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,13 +25,23 @@ body {
   align-items: center;
 }
 
+.plus-button-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .new-log {
   height: 50px;
   width: 50px;
   background-color: plum;
   font-size: 25px;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
   font-weight: bold;
+  border-style: solid;
   border-width: 2px;
   border-radius: 100%;
 }
